# ArtificialLife

./: .gitignore  CMakeLists.txt
ArtificialLife/: ArtificialLife.cpp  ArtificialLife.h  CMakeLists.txt  Creature.cpp  Creature.h  Predator.cpp  Predator.h  Prey.cpp  Prey.h  Slider.cpp  Slider.h  World.cpp  World.h  util.cpp  util.h
